aggiustamenti per la creazione del pacchetto su win e linux